# rf-drone-platform

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  api.py  check_ports.py  debug_tc010.py  docker-compose.yml  kill_collector.py  main.py  platform.pid  pyproject.toml  requirements.txt  restart_collector.sh  run_tests.sh  start.bat  start.sh  start_all_services.sh  start_output.log.new  test_repeater.py  test_socketio_client.py  v1.py  v2.py  v3.py
IQ-Record/: noise_5db_600k.config
agents/xiaobian/: CONTEXT.md  HANDBOOK.md
backend/: __init__.py  collector_io_client.py  config_manager.py  main.py  session.py
backend/api/: collector_proxy.py  components.py  devices.py  session.py
backend/components/: sim_component.py
backend/inference/: __init__.py  frame_queue.py  framework.py
backend/socketio/: __init__.py  server.py
collector/: __init__.py  api.py  collector.py  devices.py  simulator.py  socketio_server.py  tcp_data_server.py
components/rfuav-two-stage/: __init__.py  component.py  manifest.yaml  stage1_infer.py  stage2_infer.py  stft.py
docs/: PROTOCOL.md  UI-TASKS.md
erro_report/: erro_log.txt
frontend/: app.js  index.html  styles.css
interfaces/: collector-api.yaml  component-manifest.yaml  platform-collector.yaml  platform-frontend.yaml
rf_drone_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: TEST_COVERAGE_RULES.md  test_collector_tcp_real.py.RULE6_VIOLATION.bak  test_tcp_connection_sequence.py.RULE6_VIOLATION.bak  test_tcp_connection_timing.py  test_tcp_end_to_end.py.RULE6_VIOLATION.bak
(+25 files in other folders)
